--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,11 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0",
-        "illuminate/support": "5.2.*|5.3.*|5.4.*"
+        "php": ">=5.6.0"
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
-        "phpunit/phpunit": "5.5.*",
-        "laravel/framework": "5.2.*|5.3.*|5.4.*"
+        "phpunit/phpunit": "5.5.*"
     },
     "autoload": {
         "psr-4": {
